my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/941014-2.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/941014-2.c:25:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   25 | main ()
      | ^
      | int
1 error generated.
